fix(mytribes): scrollbar fix

--- a/app/client/stylesheets/components/pu-dropdown.sass
+++ b/app/client/stylesheets/components/pu-dropdown.sass
@@ -58,11 +58,13 @@
         .main
 
             ul
-                // border-right: 2px solid $color-header
                 border-left: 2px solid $color-header
                 min-height: 242px
                 overflow-x: hidden
                 max-height: 294px
+
+                &::-webkit-scrollbar
+                    display: none
 
                 .pu-dropdownitem
                     border-right: 2px solid $color-header
